--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,8 @@
 platform = espressif8266
 board = esp12e
 framework = arduino
+lib_deps = 
+	crankyoldgit/IRremoteESP8266@^2.7.18
+	bblanchon/ArduinoJson@^6.17.3
+	knolleary/PubSubClient@^2.8
+monitor_speed = 115200
