--- a/platformio.ini
+++ b/platformio.ini
@@ -16,4 +16,5 @@ lib_deps =
 	crankyoldgit/IRremoteESP8266@^2.7.18
 	bblanchon/ArduinoJson@^6.17.3
 	knolleary/PubSubClient@^2.8
+	tzapu/WiFiManager@^0.16.0
 monitor_speed = 115200
